feat(thesis): add initial structure

--- a/content/abstract.tex
+++ b/content/abstract.tex
@@ -10,11 +10,8 @@
 % TODO: Távolítsd el a megjegyzést, ha mégis szeretnéd, hogy bekerüljön a tartalomjegyzékbe
 %\addcontentsline{toc}{chapter}{Kivonat}
 
-Jelen dokumentum a hivatalos BME-VIK diplomaterv és szakdolgozat sablonnak a \textbf{Hibatűrő Rendszerek Kutatócsoport} által karban tartott verzióján alapul. Célja, hogy segítse \sze{} \givk án végző hallgatókat szakdolgozatuk, vagy diplomatervük elkészítésében. Ez a sablon \LaTeX~alapú, a \emph{TeXLive} \TeX-implementációval és a PDF-\LaTeX~fordítóval működőképes. 
-
-Köszönet a Hibatűrő Rendszerek Kutatócsoportnak akik karban tartják a repository-t amin ez a sablon alapul:
-\url{https://github.com/FTSRG/thesis-template-latex}
-
+Szakdolgozatomban egy olyan digitális hangtechnikai rendszer tervezését és megvalósítását mutatom be, amely teljes mértékben digitális alapokra helyezi a hangsúlyt.
+Be fogom mutatni a rendszer tervezésének lépéseit, a különböző protokollok közötti választást, a rendszer felépítését, és a rendszer működését.
 
 \vfill
 \selectenglish
