--- a/include/variables.tex
+++ b/include/variables.tex
@@ -105,6 +105,22 @@
     \en{Appendix}%
     \hu{Függelék}%
 }
+\newcommand{\AudioOverIp}{%
+    \en{Presentation of Audio over IP systems}%
+    \hu{Audio over IP rendszerek bemutatása}%
+}
+\newcommand{\SystemDesign}{%
+    \en{System design}%
+    \hu{Rendszertervezés}%
+}
+\newcommand{\SystemDeployment}{%
+    \en{System deployment in a real environment}%
+    \hu{Rendszer telepítése elő környezetben}%
+}
+\newcommand{\FurtherDevelopment}{%
+    \en{Operational experience and further development opportunities}%
+    \hu{Üzemeltetési tapasztalatok és továbbfejlesztési lehetőségek}%
+}
 
 \newcommand{\szerzo}{%
     \en{\szerzoKeresztnev{} \szerzoVezeteknev}%
