--- a/thesis.tex
+++ b/thesis.tex
@@ -11,23 +11,24 @@
 
 %TODO Saját adataiddal töltsd ki a kommentek szerint
 %--------------------------------------------------------------------------------------
-\newcommand{\szerzoVezeteknev}{Gipsz}
-\newcommand{\szerzoKeresztnev}{Jakab}
-\newcommand{\szerzoNeptun}{NEPTUN}
+\newcommand{\szerzoVezeteknev}{Székely}
+\newcommand{\szerzoKeresztnev}{Dániel}
+\newcommand{\szerzoNeptun}{JAXC3C}
 
 \newcommand{\szakirany}{} % Informatikusoknál nincs szakirány. Villamosmérnököknél: Automatizálás (\aut) vagy Infokommunikáció (\infokom).
 
 \newcommand{\konzulensAMegszolitas}{}
-\newcommand{\konzulensAVezeteknev}{Konzulens}
-\newcommand{\konzulensAKeresztnev}{Károly}
+\newcommand{\konzulensAVezeteknev}{Paál}
+\newcommand{\konzulensAKeresztnev}{Dávid}
 \newcommand{\konzulensBMegszolitas}{}
-\newcommand{\konzulensBVezeteknev}{Konzulens}
-\newcommand{\konzulensBKeresztnev}{Kálmán}
+\newcommand{\konzulensBVezeteknev}{Tamás}
+\newcommand{\konzulensBKeresztnev}{Dávid}
 \newcommand{\konzulensCMegszolitas}{}
 \newcommand{\konzulensCVezeteknev}{}
 \newcommand{\konzulensCKeresztnev}{}
 
-\newcommand{\cim}{Dolgozat címe} % Cím
+\newcommand{\cim}{Digitális audio - Dante protokollra épülő hangrendszer
+tervezése, építése, optimalizálása, beüzemelése} % Cím
 \newcommand{\tanszek}{\szeit} % informatika (\szeit), automatizálási (\szeaut) vagy távközlési (\szetat)
 \newcommand{\doktipus}{\szakdolgozat} % Dokumentum típusa (\szakdolgozat, \diplomaterv vagy \dolgozat)
 \newcommand{\szak}{\infoBSc} % Mérnökinformatikus BSc (\infoMsc), MSc (\infoMsc), Gazdaságinformatikus BSc (\gazdInfoBsc), MSc (\gazdInfoMsc), vagy Villamosmérnöki BSc (\villBSc), MSc (\villMSc)
@@ -49,7 +50,7 @@
 %--------------------------------------------------------------------------------------
 \begin{document}
 
-\selectthesislanguage
+\selectthesislanguage 
 
 % Külső borító, minta kötéshez - csak elektronikus leadás esetén eltávolítandó
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -78,9 +79,10 @@
 
 %TODO készítsd el a saját munkád
 \include{content/introduction}
-\include{content/thesis-format}
-\include{content/latex-tools}
-\include{content/template-usage}
+\include{content/audio_over_ip_systems}
+\include{content/system_desing}
+\include{content/system_deployment}
+\include{content/further_development}
 
 
 % Köszönetnyilvánítás - opcionális
