feat(thesis): daily update

--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -1,34 +1,5 @@
-@book{Wettl04,
-  author    = {Ferenc Wettl and Gyula Mayer and Péter Szabó},
-  publisher = {Panem Könyvkiadó},
-  title     = {\LaTeX~kézikönyv},
-  year      = {2004},
-}
 
-@article{Candy86,
-  author       = {James C. Candy},
-  journaltitle = {{IEEE} Trans.\ on Communications},
-  month        = {01},
-  note         = {\doi{10.1109/TCOM.1986.1096432}},
-  number       = {1},
-  pages        = {72--76},
-  title        = {Decimation for Sigma Delta Modulation},
-  volume       = {34},
-  year         = {1986},
-}
-
-@inproceedings{Lee87,
-  author    = {Wai L. Lee and Charles G. Sodini},
-  booktitle = {Proc.\ of the IEEE International Symposium on Circuits and Systems},
-  location  = {Philadelphia, PA, USA},
-  month     = {05~4--7},
-  pages     = {459--462},
-  title     = {A Topology for Higher Order Interpolative Coders},
-  vol       = {2},
-  year      = {1987},
-}
-
-@thesis{KissPhD,
+thesis{KissPhD,
   author      = {Peter Kiss},
   institution = {Technical University of Timi\c{s}oara, Romania},
   month       = {04},
@@ -37,37 +8,7 @@
   year        = {2000},
 }
 
-@manual{Schreier00,
-  author       = {Richard Schreier},
-  month        = {01},
-  note         = {\url{http://www.mathworks.com/matlabcentral/fileexchange/}},
-  organization = {Oregon State University},
-  title        = {The Delta-Sigma Toolbox v5.2},
-  year         = {2000},
-}
-
-@misc{DipPortal,
-  author       = {{Budapesti Műszaki és Gazdaságtudományi Egyetem Villamosmérnöki és Informatikai Kar}},
-  howpublished = {\url{http://diplomaterv.vik.bme.hu/}},
-  title        = {Diplomaterv portál (2011. február 26.)},
-}
-
-@incollection{Mkrtychev:1997,
-  author    = {Mkrtychev, Alexey},
-  booktitle = {Logical Foundations of Computer Science},
-  doi       = {10.1007/3-540-63045-7_27},
-  editor    = {Adian, Sergei and Nerode, Anil},
-  isbn      = {978-3-540-63045-6},
-  pages     = {266-275},
-  publisher = {Springer Berlin Heidelberg},
-  series    = {Lecture Notes in Computer Science},
-  title     = {Models for the logic of proofs},
-  url       = {http://dx.doi.org/10.1007/3-540-63045-7_27},
-  volume    = {1234},
-  year      = {1997},
-}
-
-@report{Jeney,
+report{Jeney,
   author      = {Jeney, Gábor},
   institution = {Budapesti Műszaki és Gazdaságtudományi Egyetem, Híradástechnikai Tanszék},
   location    = {Budapest},
@@ -77,3 +18,120 @@
   year        = {2014},
 }
 
+----------------------------------------------------------------------------
+Sound Reinforcement for
+Audio Engineers
+Edited by Wolfgang Ahnert and Dirk Noy
+
+First published 2023
+by Routledge
+4 Park Square, Milton Park, Abingdon, Oxon OX14 4RN
+and by Routledge
+605 Third Avenue, New York, NY 10158
+Routledge is an imprint of the Taylor & Francis Group, an informa business
+© 2023 selection and editorial matter, Wolfgang Ahnert and Dirk Noy; individual chapters,
+the contributors
+The right of Wolfgang Ahnert and Dirk Noy to be identified as the authors of the
+editorial material, and of the authors for their individual chapters, has been asserted in
+accordance with sections 77 and 78 of the Copyright, Designs and Patents Act 1988.
+All rights reserved. No part of this book may be reprinted or reproduced or utilised
+in any form or by any electronic, mechanical, or other means, now known or
+hereafter invented, including photocopying and recording, or in any information
+storage or retrieval system, without permission in writing from the publishers.
+Trademark notice: Product or corporate names may be trademarks or registered trademarks,
+and are used only for identification and explanation without intent to infringe.
+British Library Cataloguing-in-Publication Data
+A catalogue record for this book is available from the British Library
+Library of Congress Cataloging-in-Publication Data
+A catalog record has been requested for this book
+ISBN: 978-1-032-11518-4 (hbk)
+ISBN: 978-1-032-11517-7 (pbk)
+ISBN: 978-1-003-22026-8 (ebk)
+DOI: 10.4324/9781003220268
+Typeset in Goudy
+by Newgen Publishing UK
+
+@book{AHNERT2023,
+  editor      = {Wolfgang Ahnert and Dirk Noy},
+  title       = {Sound Reinforcement for Audio Engineers},
+  publisher   = {Routledge},
+  address     = {Abingdon, Oxon and New York, NY},
+  year        = {2023},
+  copyright   = {© 2023 Wolfgang Ahnert and Dirk Noy},
+  isbn        = {978-1-032-11518-4 (hbk)},
+  doi         = {10.4324/9781003220268},
+  typeset     = {Goudy},
+  typesetter  = {Newgen Publishing UK},
+}
+
+
+----------------------------------------------------------------------------
+
+
+----------------------------------------------------------------------------
+Sound Systems: Design and Optimization
+Modern Techniques and Tools for Sound System Design and
+Alignment
+Third Edition
+Bob McCarthy
+
+
+Third edition published 2016
+by Focal Press
+711 Third Avenue, New York, NY 10017
+and by Focal Press
+2 Park Square, Milton Park, Abingdon, Oxon OX14 4RN
+Focal Press is an imprint of the Taylor & Francis Group, an informa business.
+© 2016 Bob McCarthy
+The right of Bob McCarthy to be identified as the author of this work has been asserted by him in
+accordance with sections 77 and 78 of the Copyright, Designs and Patents Act 1988.
+All rights reserved. No part of this book may be reprinted or reproduced or utilized in any form or
+by any electronic, mechanical or other means, now known or hereafter invented, including
+photocopying and recording, or in any information storage or retrieval system, without permission in
+writing from the publishers.
+Notices
+Knowledge and best practice in this field are constantly changing. As new research and experience
+broaden our understanding, changes in research methods, professional practices or medical treatment
+may become necessary.
+Practitioners and researchers must always rely on their own experience and knowledge in evaluating
+and using any information, methods, compounds or experiments described herein. In using such
+information or methods they should be mindful of their own safety and the safety of others,
+including parties for whom they have a professional responsibility.
+Product or corporate names may be trademarks or registered trademarks, and are used only for
+identification and explanation without intent to infringe.
+First published XXX by XX
+Second edition published XXX by XX
+Library of Congress Cataloging-in-Publication Data
+McCarthy, Bob.
+Sound systems: design and optimization: modern techniques and tools for sound system design and
+alignment / by Bob McCarthy. — Third edition.
+pages cm
+Includes bibliographical references and index.
+ISBN 978-0-415-73099-0 (hardback) — ISBN 978-0-415-73101-0 (pbk.) — ISBN 978-1-315-84984-3
+(ebk) 1. Sound—Recording and reproducing. I. Title.
+TK7881.4.M42 2016
+621.389'3—dc23
+2015016842
+ISBN: 978-0-415-73101-0 (pbk)
+ISBN: 978-0-415-73099-0 (hbk)
+ISBN: 978-1-315-84984-3 (ebk)
+Typeset in Giovanni
+By Apex CoVantage, LLC
+
+@book{MCCARTHY2016,
+  author      = {Bob McCarthy},
+  title       = {Sound Systems: Design and Optimization},
+  edition     = {Third Edition},
+  publisher   = {Focal Press},
+  address     = {New York, NY and Abingdon, Oxon},
+  year        = {2016},
+  copyright   = {© 2016 Bob McCarthy},
+  isbn        = {978-0-415-73101-0 (pbk)},
+  pages       = {12--842},
+  note        = {Library of Congress Cataloging-in-Publication Data: TK7881.4.M42 2016},
+  typeset     = {Giovanni},
+  typesetter  = {Apex CoVantage, LLC},
+}
+
+
+----------------------------------------------------------------------------
