--- a/include/variables.tex
+++ b/include/variables.tex
@@ -110,12 +110,8 @@
     \hu{Audio over IP rendszerek bemutatása}%
 }
 \newcommand{\SystemDesign}{%
-    \en{System design}%
-    \hu{Rendszertervezés}%
-}
-\newcommand{\SystemDeployment}{%
-    \en{System deployment in a real environment}%
-    \hu{Rendszer telepítése elő környezetben}%
+    \en{System design and deployment in live environment}%
+    \hu{Rendszertervezés és telepítés elő környezetben}%
 }
 \newcommand{\FurtherDevelopment}{%
     \en{Operational experience and further development opportunities}%
