feat(thesis): daily update

--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -135,3 +135,25 @@ By Apex CoVantage, LLC
 
 
 ----------------------------------------------------------------------------
+
+
+@online{dante_certification_1,
+  title = {Dante Certification Level 1 (Second Edition) - English},
+  author = {Dante},
+  year = {2024},
+  url = {https://www.youtube.com/playlist?list=PL2UzvxHZNUyJMZCTtuD4xwxcn5WpFwyjv},
+}
+
+@online{dante_certification_2,
+  title = {Dante Certification Level 2 (Second Edition) - English},
+  author = {Dante},
+  year = {2024},
+  url = {https://www.youtube.com/playlist?list=PL2UzvxHZNUyIoCk4AX2xF2YT4B9gBXms0},
+}
+
+@online{dante_certification_3,
+  title = {Dante Certification Level 3 (Second Edition) - English},
+  author = {Dante},
+  year = {2024},
+  url = {https://www.youtube.com/playlist?list=PL2UzvxHZNUyLRvb3eIKMip_1sD2b5LcA3},
+}
