feat(thesis): daily update

--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -136,24 +136,34 @@ By Apex CoVantage, LLC
 
 ----------------------------------------------------------------------------
 
-
-@online{dante_certification_1,
-  title = {Dante Certification Level 1 (Second Edition) - English},
-  author = {Dante},
+@online{MARTINAUDIOWPC,
+  author = {Martin Audio},
+  title = {WPC - Martin Audio Loudspeakers},
   year = {2024},
-  url = {https://www.youtube.com/playlist?list=PL2UzvxHZNUyJMZCTtuD4xwxcn5WpFwyjv},
+  url = {https://martin-audio.com/products/loudspeakers/wpc},
+  note = {Accessed on: 2024.01.04.}
 }
 
-@online{dante_certification_2,
-  title = {Dante Certification Level 2 (Second Edition) - English},
-  author = {Dante},
-  year = {2024},
-  url = {https://www.youtube.com/playlist?list=PL2UzvxHZNUyIoCk4AX2xF2YT4B9gBXms0},
-}
 
-@online{dante_certification_3,
-  title = {Dante Certification Level 3 (Second Edition) - English},
-  author = {Dante},
-  year = {2024},
-  url = {https://www.youtube.com/playlist?list=PL2UzvxHZNUyLRvb3eIKMip_1sD2b5LcA3},
+https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
+https://broadmax.hu/wp-content/uploads/2016/10/rise-of-audio-networking-audinate-wp.pdf
+https://broadmax.hu/blog/audio-over-ip/
+https://rhconsulting.uk/blog/networked-audio-products-2023/
+
+
+@bachelorsthesis{TAMASDAVIDBSC,
+  author = {Tamás Dávid},
+  title = {Automatizált színházi előadás bemutatása a villamos hálózat kiépítésétől a közönségig},
+  school = {Széchenyi István Egyetem},
+  year = {2016},
+  type = {Villamosmérnöki BSc szak},
+  note = {Feladat-kiíró lap szakdolgozat II. tárgyhoz},
+  supervisor = {Somogyi Miklós},
+  supervisordepartment = {Automatizálási tanszék},
+  externaladvisor = {Katavics Lajos},
+  externaladvisorposition = {Cégvezető},
+  startyear = {2015},
+  endyear = {2016},
+  language = {magyar},
+  type = {nyilvános},
 }
