--- a/thesis.tex
+++ b/thesis.tex
@@ -8,6 +8,9 @@
 
 \input{include/packages}
 
+\usepackage{float}
+
+
 
 %TODO Saját adataiddal töltsd ki a kommentek szerint
 %--------------------------------------------------------------------------------------
