feat(thesis): daily update

--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -135,16 +135,6 @@ By Apex CoVantage, LLC
 
 
 ----------------------------------------------------------------------------
-
-@online{MARTINAUDIOWPC,
-  author = {Martin Audio},
-  title = {WPC - Martin Audio Loudspeakers},
-  year = {2024},
-  url = {https://martin-audio.com/products/loudspeakers/wpc},
-  note = {Accessed on: 2024.01.04.}
-}
-
-
 https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
 https://broadmax.hu/wp-content/uploads/2016/10/rise-of-audio-networking-audinate-wp.pdf
 https://broadmax.hu/blog/audio-over-ip/
@@ -157,13 +147,36 @@ https://rhconsulting.uk/blog/networked-audio-products-2023/
   school = {Széchenyi István Egyetem},
   year = {2016},
   type = {Villamosmérnöki BSc szak},
-  note = {Feladat-kiíró lap szakdolgozat II. tárgyhoz},
-  supervisor = {Somogyi Miklós},
-  supervisordepartment = {Automatizálási tanszék},
-  externaladvisor = {Katavics Lajos},
-  externaladvisorposition = {Cégvezető},
   startyear = {2015},
   endyear = {2016},
   language = {magyar},
   type = {nyilvános},
+}
+
+@manual{DISPLAY23USERGUIDE,
+    title = {Display v2.3 USER GUIDE v1.5},
+    author = {Martin Audio},
+    url = {https://martin-audio.com/downloads/userguides/Display-2.3-User-Guide-v1.5.pdf},
+    note = {Accessed on: 2024-01-04.}
+}
+
+@manual{WPCUSERGUIDE,
+    title = {WPC User Guide},
+    author = {Martin Audio},
+    url = {https://martin-audio.com/downloads/userguides/WPC-User-Guide.pdf},
+    note = {Accessed on: 2024-01-04.}
+}
+
+@manual{WPMUSERGUIDE,
+    title = {WPM User Guide},
+    author = {Martin Audio},
+    url = {https://martin-audio.com/downloads/userguides/WPM-User-Guide.pdf},
+    note = {Accessed on: 2024-01-04.}
+}
+
+@manual{SXSUBWOOFERUSERGUIDE,
+    title = {SX Subwoofer User Guide},
+    author = {Martin Audio},
+    url = {https://martin-audio.com/downloads/userguides/SX-Subwoofer-User-Guide.pdf},
+    note = {Accessed on: 2024-01-04.}
 }
