feat(thesis): daily update

--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -52,16 +52,16 @@ Typeset in Goudy
 by Newgen Publishing UK
 
 @book{AHNERT2023,
-  editor      = {Wolfgang Ahnert and Dirk Noy},
-  title       = {Sound Reinforcement for Audio Engineers},
-  publisher   = {Routledge},
-  address     = {Abingdon, Oxon and New York, NY},
-  year        = {2023},
-  copyright   = {© 2023 Wolfgang Ahnert and Dirk Noy},
-  isbn        = {978-1-032-11518-4 (hbk)},
-  doi         = {10.4324/9781003220268},
-  typeset     = {Goudy},
-  typesetter  = {Newgen Publishing UK},
+  editor     = {Wolfgang Ahnert and Dirk Noy},
+  title      = {Sound Reinforcement for Audio Engineers},
+  publisher  = {Routledge},
+  address    = {Abingdon, Oxon and New York, NY},
+  year       = {2023},
+  copyright  = {© 2023 Wolfgang Ahnert and Dirk Noy},
+  isbn       = {978-1-032-11518-4 (hbk)},
+  doi        = {10.4324/9781003220268},
+  typeset    = {Goudy},
+  typesetter = {Newgen Publishing UK}
 }
 
 
@@ -119,18 +119,18 @@ Typeset in Giovanni
 By Apex CoVantage, LLC
 
 @book{MCCARTHY2016,
-  author      = {Bob McCarthy},
-  title       = {Sound Systems: Design and Optimization},
-  edition     = {Third Edition},
-  publisher   = {Focal Press},
-  address     = {New York, NY and Abingdon, Oxon},
-  year        = {2016},
-  copyright   = {© 2016 Bob McCarthy},
-  isbn        = {978-0-415-73101-0 (pbk)},
-  pages       = {12--842},
-  note        = {Library of Congress Cataloging-in-Publication Data: TK7881.4.M42 2016},
-  typeset     = {Giovanni},
-  typesetter  = {Apex CoVantage, LLC},
+  author     = {Bob McCarthy},
+  title      = {Sound Systems: Design and Optimization},
+  edition    = {Third Edition},
+  publisher  = {Focal Press},
+  address    = {New York, NY and Abingdon, Oxon},
+  year       = {2016},
+  copyright  = {© 2016 Bob McCarthy},
+  isbn       = {978-0-415-73101-0 (pbk)},
+  pages      = {12--842},
+  note       = {Library of Congress Cataloging-in-Publication Data: TK7881.4.M42 2016},
+  typeset    = {Giovanni},
+  typesetter = {Apex CoVantage, LLC}
 }
 
 
@@ -142,41 +142,41 @@ https://rhconsulting.uk/blog/networked-audio-products-2023/
 
 
 @bachelorsthesis{TAMASDAVIDBSC,
-  author = {Tamás Dávid},
-  title = {Automatizált színházi előadás bemutatása a villamos hálózat kiépítésétől a közönségig},
-  school = {Széchenyi István Egyetem},
-  year = {2016},
-  type = {Villamosmérnöki BSc szak},
+  author    = {Tamás Dávid},
+  title     = {Automatizált színházi előadás bemutatása a villamos hálózat kiépítésétől a közönségig},
+  school    = {Széchenyi István Egyetem},
+  year      = {2016},
+  type      = {Villamosmérnöki BSc szak},
   startyear = {2015},
-  endyear = {2016},
-  language = {magyar},
-  type = {nyilvános},
+  endyear   = {2016},
+  language  = {magyar},
+  type      = {nyilvános}
 }
 
 @manual{DISPLAY23USERGUIDE,
-    title = {Display v2.3 USER GUIDE v1.5},
-    author = {Martin Audio},
-    url = {https://martin-audio.com/downloads/userguides/Display-2.3-User-Guide-v1.5.pdf},
-    note = {Accessed on: 2024-01-04.}
+  title  = {Display v2.3 USER GUIDE v1.5},
+  author = {Martin Audio},
+  url    = {https://martin-audio.com/downloads/userguides/Display-2.3-User-Guide-v1.5.pdf},
+  note   = {Accessed on: 2024-01-04.}
 }
 
 @manual{WPCUSERGUIDE,
-    title = {WPC User Guide},
-    author = {Martin Audio},
-    url = {https://martin-audio.com/downloads/userguides/WPC-User-Guide.pdf},
-    note = {Accessed on: 2024-01-04.}
+  title  = {WPC User Guide},
+  author = {Martin Audio},
+  url    = {https://martin-audio.com/downloads/userguides/WPC-User-Guide.pdf},
+  note   = {Accessed on: 2024-01-04.}
 }
 
 @manual{WPMUSERGUIDE,
-    title = {WPM User Guide},
-    author = {Martin Audio},
-    url = {https://martin-audio.com/downloads/userguides/WPM-User-Guide.pdf},
-    note = {Accessed on: 2024-01-04.}
+  title  = {WPM User Guide},
+  author = {Martin Audio},
+  url    = {https://martin-audio.com/downloads/userguides/WPM-User-Guide.pdf},
+  note   = {Accessed on: 2024-01-04.}
 }
 
 @manual{SXSUBWOOFERUSERGUIDE,
-    title = {SX Subwoofer User Guide},
-    author = {Martin Audio},
-    url = {https://martin-audio.com/downloads/userguides/SX-Subwoofer-User-Guide.pdf},
-    note = {Accessed on: 2024-01-04.}
+  title  = {SX Subwoofer User Guide},
+  author = {Martin Audio},
+  url    = {https://martin-audio.com/downloads/userguides/SX-Subwoofer-User-Guide.pdf},
+  note   = {Accessed on: 2024-01-04.}
 }
